--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,10 +1,11 @@
 {
   "current": {
-    "logo": "shopify:\/\/shop_images\/logo_BLACK_2x_2795e837-602d-4e27-9d05-b8b6f425eff5.png",
+    "logo": "shopify:\/\/shop_images\/LOGO_BLACK_BUBBA_PNG.png",
     "logo_width": 120,
-    "type_header_font": "montserrat_n4",
+    "favicon": "shopify:\/\/shop_images\/black-logo-nuevo2_1.png",
+    "type_header_font": "montserrat_n3",
     "heading_scale": 100,
-    "type_body_font": "montserrat_n4",
+    "type_body_font": "montserrat_n3",
     "body_scale": 100,
     "page_width": 1600,
     "spacing_sections": 0,
